tests/netpol_named_port_test_2/pods.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: helloworld
spec: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-a
  namespace: helloworld
  labels:
    app: app-a
spec:
  selector:
    matchLabels:
      app: app-a
  template:
    metadata:
      labels:
        app: app-a
    spec:
      containers:
      - name: helloworld
        image: quay.io/shfa/app-a:latest
        ports:
        - name: newport
          containerPort: 8956
          protocol: SCTP
        - name: udps
          containerport: 3535
          protocol: UDP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-pod
  namespace: helloworld
  labels:
    app: app-b
spec:
  selector:
    matchLabels:
      app: app-b
  template:
    metadata:
      labels:
        app: app-b
    spec:
      containers:
      - name: helloworld
        image: quay.io/shfa/ingress-world:latest
        ports:
        - name: sctp-port
          containerPort: 8956
          protocol: SCTP
        - name: newport
          containerPort: 9090
          protocol: SCTP
        - containerPort: 8050
        - containerPort: 8090
---
